fix(Countermeasures): A number of fixes to countermeasures. Adds ability to activate countermeasures before they are launched. Sorts available module list. Built modules can be removed and the resources are recycled for half of their original value. Add a field for flight directors to add notes to countermeasures so they know how they responded to them. Countermeasures that have not been built are now visible to the flight director. Fixes #2817

--- a/src/components/views/Countermeasures/style.scss
+++ b/src/components/views/Countermeasures/style.scss
@@ -53,6 +53,7 @@
       cursor: pointer;
       .module-type-upper {
         display: flex;
+        flex-direction: column;
       }
       &.selected {
         background-color: rgba(255, 255, 255, 0.1);
@@ -63,9 +64,7 @@
         border: solid 1px rgba(255, 255, 255, 0.5);
         margin-right: 1rem;
         padding: 0.2rem;
-      }
-      .module-type-info {
-        flex: 1;
+        float: left;
       }
       .module-type-resource {
         margin-top: 0.5rem;
@@ -193,6 +192,9 @@
     }
     .building {
       background-color: orangered;
+    }
+    .active {
+      background-color: rebeccapurple;
     }
     .selected {
       box-shadow: 0px 0px 0px 3px gold;
